@@ -1,26 +1,25 @@
 package com.example.orgo_project.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.example.orgo_project.dto.OrderDetailDTO;
 import com.example.orgo_project.dto.OrderItemDTO;
 import com.example.orgo_project.dto.OrderSummaryDTO;
 import com.example.orgo_project.entity.CustomerOrder;
 import com.example.orgo_project.entity.CustomerOrderItem;
-import com.example.orgo_project.entity.Product;
 import com.example.orgo_project.entity.ProductVariant;
+import com.example.orgo_project.entity.Product;
 import com.example.orgo_project.entity.Seller;
 import com.example.orgo_project.enums.OrderStatus;
 import com.example.orgo_project.repository.ICustomerOrderItemRepository;
 import com.example.orgo_project.repository.ICustomerOrderRepository;
-import com.example.orgo_project.repository.IProductRepository;
 import com.example.orgo_project.repository.IProductVariantRepository;
+import com.example.orgo_project.repository.IProductRepository;
 import com.example.orgo_project.repository.ISellerRepository;
 import com.example.orgo_project.repository.IShippingAddressRepository;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -33,7 +32,6 @@ public class OrderService implements IOrderService {
     private final ISellerRepository sellerRepository;
     private final IShippingAddressRepository shippingAddressRepository;
     private final IRevenueDistributionService revenueDistributionService;
-    private final com.example.orgo_project.repository.IUserProfileRepository userProfileRepository;
 
     public OrderService(ICustomerOrderRepository orderRepository,
                         ICustomerOrderItemRepository orderItemRepository,
@@ -41,8 +39,7 @@ public class OrderService implements IOrderService {
                         IProductRepository productRepository,
                         ISellerRepository sellerRepository,
                         IShippingAddressRepository shippingAddressRepository,
-                        IRevenueDistributionService revenueDistributionService,
-                        com.example.orgo_project.repository.IUserProfileRepository userProfileRepository) {
+                        IRevenueDistributionService revenueDistributionService) {
         this.orderRepository = orderRepository;
         this.orderItemRepository = orderItemRepository;
         this.variantRepository = variantRepository;
@@ -50,72 +47,32 @@ public class OrderService implements IOrderService {
         this.sellerRepository = sellerRepository;
         this.shippingAddressRepository = shippingAddressRepository;
         this.revenueDistributionService = revenueDistributionService;
-        this.userProfileRepository = userProfileRepository;
-    }
-    
-    /**
-     * Lấy danh sách ID tương thích để query đơn hàng (hỗ trợ cả dữ liệu cũ và mới)
-     * - Dữ liệu cũ: id_nguoi_dung = id_tai_khoan (sai)
-     * - Dữ liệu mới: id_nguoi_dung = UserProfile.id (đúng)
-     */
-    private java.util.List<Integer> getCompatibleUserIds(Integer accountId) {
-        java.util.List<Integer> ids = new java.util.ArrayList<>();
-        
-        // Thêm accountId (cho dữ liệu cũ lưu sai)
-        ids.add(accountId);
-        
-        // Thêm userProfileId (cho dữ liệu mới lưu đúng)
-        userProfileRepository.findByAccount_Id(accountId).ifPresent(profile -> {
-            if (profile.getId() != null && !ids.contains(profile.getId())) {
-                ids.add(profile.getId());
-            }
-        });
-        
-        return ids;
     }
 
     @Override
     public List<OrderSummaryDTO> getMyOrders(Integer accountId) {
-        // ✅ Query theo cả accountId và userProfileId để hỗ trợ dữ liệu cũ + mới
-        java.util.List<Integer> compatibleIds = getCompatibleUserIds(accountId);
-        return orderRepository.findByUserIdInOrderByOrderedAtDesc(compatibleIds)
+        return orderRepository.findByUserIdOrderByOrderedAtDesc(accountId)
                 .stream().map(this::toSummary).toList();
     }
 
-    @Override
     public boolean confirmDelivery(Integer accountId, Integer orderId) {
         com.example.orgo_project.entity.CustomerOrder order = orderRepository.findById(orderId)
                 .orElse(null);
-        if (order == null) return false;
-        
-        // ✅ Kiểm tra quyền với cả accountId và userProfileId
-        java.util.List<Integer> compatibleIds = getCompatibleUserIds(accountId);
-        if (!compatibleIds.contains(order.getUserId())) return false;
+        if (order == null || !order.getUserId().equals(accountId)) return false;
         if (order.getOrderStatus() != com.example.orgo_project.enums.OrderStatus.SHIPPED) return false;
-        
-        // Cập nhật trạng thái đơn hàng
         order.setOrderStatus(com.example.orgo_project.enums.OrderStatus.DELIVERED);
         order.setDeliveredAt(java.time.LocalDateTime.now());
         orderRepository.save(order);
-        
-        // ✅ KÍCH HOẠT CHIA TIỀN TỰ ĐỘNG khi user xác nhận đã nhận hàng
         try {
             revenueDistributionService.distributeForOrder(orderId);
-            System.out.println("✅ Revenue distributed successfully for order: " + order.getOrderCode());
-        } catch (Exception e) {
-            System.err.println("❌ Failed to distribute revenue for order " + order.getOrderCode() + ": " + e.getMessage());
-            // Không throw exception để không ảnh hưởng đến việc xác nhận nhận hàng
-            // Admin có thể chia tiền thủ công sau
+        } catch (Exception ex) {
+            System.err.println("Revenue distribution failed for delivered order " + orderId + ": " + ex.getMessage());
         }
-        
         return true;
     }
 
-    @Override
     public List<OrderSummaryDTO> getMyOrdersByStatus(Integer accountId, OrderStatus status) {
-        // ✅ Query theo cả accountId và userProfileId để hỗ trợ dữ liệu cũ + mới
-        java.util.List<Integer> compatibleIds = getCompatibleUserIds(accountId);
-        return orderRepository.findByUserIdInAndOrderStatusOrderByOrderedAtDesc(compatibleIds, status)
+        return orderRepository.findByUserIdAndOrderStatusOrderByOrderedAtDesc(accountId, status)
                 .stream().map(this::toSummary).toList();
     }
 
@@ -123,12 +80,6 @@ public class OrderService implements IOrderService {
     public OrderDetailDTO getOrderDetail(Integer accountId, Integer orderId) {
         CustomerOrder order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn hàng"));
-        
-        // ✅ Kiểm tra quyền truy cập với cả accountId và userProfileId
-        java.util.List<Integer> compatibleIds = getCompatibleUserIds(accountId);
-        if (!compatibleIds.contains(order.getUserId())) {
-            throw new RuntimeException("Bạn không có quyền xem đơn hàng này");
-        }
 
         // Lấy tên shop
         String shopName = null;
@@ -200,12 +151,8 @@ public class OrderService implements IOrderService {
     public boolean cancelOrder(Integer accountId, Integer orderId, String reason) {
         CustomerOrder order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn hàng"));
-        
-        // ✅ Kiểm tra quyền với cả accountId và userProfileId
-        java.util.List<Integer> compatibleIds = getCompatibleUserIds(accountId);
-        if (!compatibleIds.contains(order.getUserId())) {
+        if (!order.getUserId().equals(accountId))
             throw new RuntimeException("Không có quyền hủy đơn này");
-        }
         if (order.getOrderStatus() != OrderStatus.PENDING && order.getOrderStatus() != OrderStatus.PROCESSING)
             throw new RuntimeException("Chỉ được hủy đơn ở trạng thái PENDING hoặc PROCESSING");
         order.setOrderStatus(OrderStatus.CANCELLED);
@@ -235,7 +182,7 @@ public class OrderService implements IOrderService {
                     }
                 }
                 return null;
-            }).filter(n -> n != null).distinct().collect(Collectors.toList());
+            }).filter(java.util.Objects::nonNull).distinct().toList();
 
             if (!names.isEmpty()) {
                 itemSummary = names.size() + " sản phẩm: " + String.join(", ",
